--- a/requirements.txt
+++ b/requirements.txt
@@ -35,8 +35,10 @@ defer==1.0.6
 defusedxml==0.7.1
 distro==1.4.0
 distro-info===0.23ubuntu1
+dj-database-url==0.5.0
 Django==3.2.7
 django-allauth==0.45.0
+django-heroku==0.3.1
 django-rest-auth==0.9.5
 djangorestframework==3.12.4
 duplicity==0.8.12.0
@@ -47,6 +49,7 @@ Flask==2.0.1
 Flask-Compress==1.10.1
 future==0.18.2
 geopandas==0.9.0
+gunicorn==20.1.0
 httplib2==0.14.0
 idna==2.8
 iniconfig==1.1.1
@@ -107,6 +110,7 @@ pluggy==1.0.0
 prometheus-client==0.11.0
 prompt-toolkit==3.0.20
 protobuf==3.6.1
+psycopg2==2.9.1
 ptyprocess==0.7.0
 py==1.10.0
 pycairo==1.16.2
@@ -166,5 +170,6 @@ wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.2.1
 Werkzeug==2.0.1
+whitenoise==5.3.0
 xkit==0.0.0
 yarl==1.6.3
