--- a/requirements.txt
+++ b/requirements.txt
@@ -1,170 +1,3 @@
-aiohttp==3.7.4.post0
-anyio==3.3.1
-argon2-cffi==21.1.0
-asgiref==3.4.1
-async-timeout==3.0.1
-attrs==21.2.0
-Babel==2.9.1
-backcall==0.2.0
-bcrypt==3.1.7
-bleach==4.1.0
-blinker==1.4
-Brotli==1.0.9
-certifi==2019.11.28
-cffi==1.14.6
-chardet==3.0.4
-click==8.0.1
-click-plugins==1.1.1
-cligj==0.7.2
-colorama==0.4.3
-cryptography==2.8
-cycler==0.10.0
-dash==2.0.0
-dash-bootstrap-components==0.13.1
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-dbus-python==1.2.16
-debugpy==1.4.3
-decorator==5.1.0
-defusedxml==0.7.1
-distro==1.4.0
-distro-info===0.23ubuntu1
-dj-database-url==0.5.0
-Django==3.2.7
-django-allauth==0.45.0
-django-heroku==0.3.1
-django-rest-auth==0.9.5
-djangorestframework==3.12.4
-duplicity==0.8.12.0
-entrypoints==0.3
-fasteners==0.14.1
-Fiona==1.8.20
-Flask==2.0.1
-Flask-Compress==1.10.1
-future==0.18.2
-geopandas==0.9.0
-gunicorn==20.1.0
-httplib2==0.14.0
-idna==2.8
-iniconfig==1.1.1
-ipykernel==6.4.1
-ipython==7.27.0
-ipython-genutils==0.2.0
-itsdangerous==2.0.1
-jedi==0.18.0
-Jinja2==3.0.1
-json5==0.9.6
-jsonschema==3.2.0
-jupyter-client==7.0.3
-jupyter-core==4.8.1
-jupyter-server==1.11.0
-jupyter-server-proxy==3.1.0
-jupyterlab==3.1.13
-jupyterlab-dash==0.1.0a3
-jupyterlab-pygments==0.1.2
-jupyterlab-server==2.8.1
-keyring==18.0.1
-kiwisolver==1.3.2
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lockfile==0.12.2
-louis==3.12.0
-macaroonbakery==1.3.1
-Mako==1.1.0
-MarkupSafe==2.0.1
-matplotlib==3.4.3
-matplotlib-inline==0.1.3
-mistune==0.8.4
-monotonic==1.5
-multidict==5.1.0
-munch==2.5.0
-mysqlclient==2.0.3
-nbclassic==0.3.2
-nbclient==0.5.4
-nbconvert==6.1.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
-netifaces==0.10.4
-notebook==6.4.4
-numpy==1.21.2
-oauthlib==3.1.0
-olefile==0.46
-packaging==21.0
-pandas==1.3.3
-pandocfilters==1.5.0
-paramiko==2.6.0
-parso==0.8.2
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==7.0.0
-plotly==5.3.1
-pluggy==1.0.0
-prometheus-client==0.11.0
-prompt-toolkit==3.0.20
-protobuf==3.6.1
-psycopg2==2.9.1
-ptyprocess==0.7.0
-py==1.10.0
-pycairo==1.16.2
-pycparser==2.20
-pycups==1.9.73
-Pygments==2.10.0
-PyGObject==3.36.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyparsing==2.4.7
-pyproj==3.2.1
-pyRFC3339==1.1
-pyrsistent==0.18.0
 pytest==6.2.5
-pytest-django==4.4.0
-python-apt==2.0.0+ubuntu0.20.4.6
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-python3-openid==3.2.0
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-pyzmq==22.3.0
-reportlab==3.5.34
-requests==2.22.0
-requests-oauthlib==1.3.0
-requests-unixsocket==0.2.0
-Rtree==0.9.7
-scipy==1.7.1
-SecretStorage==2.3.1
-Send2Trash==1.8.0
-Shapely==1.7.1
-simpervisor==0.4
-simplejson==3.16.0
-six==1.14.0
-sniffio==1.2.0
-sqlparse==0.4.1
-ssh-import-id==5.10
-systemd-python==234
-tenacity==8.0.1
-terminado==0.12.1
-testpath==0.5.0
-toml==0.10.2
-tornado==6.1
-traitlets==5.1.0
-typing-extensions==3.10.0.2
-ubuntu-advantage-tools==27.2
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-urwid==2.1.2
-usb-creator==0.3.7
-wadllib==1.3.3
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.2.1
-Werkzeug==2.0.1
-whitenoise==5.3.0
-xkit==0.0.0
-yarl==1.6.3
+Django==2.2.12
+django_heroku==0.3.1
